--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+@charset "utf-8";
+@import url(https://fonts.googleapis.com/earlyaccess/notosansjapanese.css);
+@import url(https://fonts.googleapis.com/css?family=Montserrat);
 /*
 LPレストランは，T&T's sincerity realizationのポートフォリオです。
 ☆☆☆☆☆☆☆☆☆☆☆☆☆☆☆☆☆☆☆☆☆☆☆☆☆☆☆☆☆☆☆☆☆☆☆☆☆☆☆☆☆☆☆☆
@@ -13,10 +16,55 @@ http://takuportf.wp.xdomain.jp
 http://takuportf.php.xdomain.jp　　ID：guest　PASSWORD：douzo
 */
 
-@charset "utf-8"
-@import url(https://fonts.googleapis.com/earlyaccess/notosansjapanese.css);
-@import url(https://fonts.googleapis.com/css?family=Montserrat);
-
+html, body, div, span, applet, object, iframe,
+h1,h2, h3, h4, h5, h6, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,p,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+}
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+    display: block;
+}
+ol,ul{
+    list-style: none;
+}
+blockquote, q {
+    quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+    content: '';
+    content: none;
+}
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+a{
+  color: #000;
+  text-decoration: none;
+}
+*{
+  box-sizing: border-box;
+}
+body *{
+    line-height: 1;
+}
 html{
   scroll-behavior: smooth;
 }
@@ -30,7 +78,6 @@ a{
   padding: 0px;
 }*/
 header{
-  /*  background:#000033;*/
    margin-top:-20px;
    padding-top:10px;
    overflow-x: hidden;
@@ -87,7 +134,7 @@ footer{
   vertical-align:bottom;
 }
 .area_logo_header p{
-  margin-top:-35px;
+  margin-top:10px;
   color:#000;/*#000033;*/
   font: 100 10px/1em 'futura PT','noto sans japanese',sans-serif;
 }
@@ -151,6 +198,7 @@ footer{
     padding-top:30px;
     z-index: 1;
 }
+
 /*ヘッダー上段*/
 .site_nav{
   list-style:none;
@@ -174,11 +222,11 @@ footer{
 }
 .site_nav a{
   color:#000;/*#000033;*/
-  font: 400 26px/1em 'futura PT','noto sans japanese',sans-serif;
+  font: 400 20px/1em 'futura PT','noto sans japanese',sans-serif;
 }
 .site_nav a:hover{
   color:#000;
-  font: 400 30px/1em 'futura PT','noto sans japanese',sans-serif;
+  font: 400 25px/1em 'futura PT','noto sans japanese',sans-serif;
   transition: 0.5s;
 }
 .contact_ico{
@@ -213,7 +261,7 @@ footer{
   display:flex;
   justify-content: flex-end;
   align-items:center;
-  margin-top:0px;
+  margin-bottom:10px;
   margin-left: 10px;
 }
 .list_nav_header > li{
@@ -330,11 +378,11 @@ footer{
   padding-top:20px;
 }
 .important_ttl{
-  font: 400 27px/1em 'futura PT','noto sans japanese',sans-serif;
-  letter-spacing: .04em;
-  margin: 20px 0 0;
-  padding: 0 0 0 40px;
-  position: relative;
+    font: 400 27px/1em 'futura PT','noto sans japanese',sans-serif;
+    letter-spacing: .04em;
+    margin: 20px 0 0;
+    padding: 0 0 0 40px;
+    position: relative;
   color:#FF0000;
   -webkit-animation:blink 1.5s ease-in-out infinite alternate;
   -moz-animation:blink 1.5s ease-in-out infinite alternate;
@@ -742,9 +790,9 @@ footer > .container{
   .under{
     display:flex;
     justify-content: flex-end;
-    align-items: flex-end;
+    align-items: center;
     text-align: center;
-    margin-bottom:20px;
+    margin-bottom:10px;
     width:90%;
     height:100px;
   }
@@ -760,7 +808,8 @@ footer > .container{
   .renraku a{
     margin-top:12px;
     padding-left:50px;
-}
+  }
+
 
 /*リスト　PC用*/
 .list_sns{
